@@ -5,12 +5,13 @@ import com.wandernest.backend.dto.wishlist.WishlistResponse;
 import com.wandernest.backend.entity.Cabin;
 import com.wandernest.backend.entity.User;
 import com.wandernest.backend.entity.Wishlist;
-import com.wandernest.backend.exception.WishlistException;
 import com.wandernest.backend.repository.CabinRepository;
 import com.wandernest.backend.repository.UserRepository;
 import com.wandernest.backend.repository.WishlistRepository;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
+
 @Service
 public class WishlistService {
 
@@ -18,32 +19,30 @@ public class WishlistService {
     private final UserRepository userRepository;
     private final CabinRepository cabinRepository;
 
-    public WishlistService(WishlistRepository wishlistRepository,
-                           UserRepository userRepository,
-                           CabinRepository cabinRepository) {
-
+    public WishlistService(
+            WishlistRepository wishlistRepository,
+            UserRepository userRepository,
+            CabinRepository cabinRepository
+    ) {
         this.wishlistRepository = wishlistRepository;
         this.userRepository = userRepository;
         this.cabinRepository = cabinRepository;
     }
 
-    public WishlistResponse addToWishlist(WishlistRequest request) {
-
-        User user = userRepository.findById(request.getUserId())
-                .orElseThrow(() ->
-                        new WishlistException("User not found."));
-
-        Cabin cabin = cabinRepository.findById(request.getCabinId())
-                .orElseThrow(() ->
-                        new WishlistException("Cabin not found."));
+    public WishlistResponse add(WishlistRequest request) {
 
         if (wishlistRepository.findByUserIdAndCabinId(
                 request.getUserId(),
-                request.getCabinId()).isPresent()) {
+                request.getCabinId()
+        ).isPresent()) {
 
-            throw new WishlistException(
-                    "Cabin already exists in wishlist.");
+            throw new RuntimeException("Already in wishlist.");
+
         }
+
+        User user = userRepository.findById(request.getUserId()).orElseThrow();
+
+        Cabin cabin = cabinRepository.findById(request.getCabinId()).orElseThrow();
 
         Wishlist wishlist = new Wishlist();
 
@@ -52,50 +51,59 @@ public class WishlistService {
 
         Wishlist saved = wishlistRepository.save(wishlist);
 
+        return map(saved);
+
+    }
+
+    public List<WishlistResponse> getUserWishlist(Long userId) {
+
+        return wishlistRepository.findByUserId(userId)
+                .stream()
+                .map(this::map)
+                .toList();
+
+    }
+
+    public void remove(Long userId, Long cabinId) {
+
+        wishlistRepository.deleteByUserIdAndCabinId(
+                userId,
+                cabinId
+        );
+
+    }
+
+    private WishlistResponse map(Wishlist wishlist) {
+
         WishlistResponse response = new WishlistResponse();
 
-        response.setWishlistId(saved.getId());
-        response.setCabinId(cabin.getId());
-        response.setCabinTitle(cabin.getTitle());
-        response.setLocation(cabin.getLocation());
+        response.setWishlistId(wishlist.getId());
 
-        if (!cabin.getImages().isEmpty()) {
+        response.setCabinId(wishlist.getCabin().getId());
+
+        response.setCabinTitle(wishlist.getCabin().getTitle());
+
+        response.setLocation(wishlist.getCabin().getLocation());
+
+        response.setRating(wishlist.getCabin().getRating());
+
+        response.setPrice(
+                wishlist.getCabin().getPricePerNight().toString()
+        );
+
+        if (!wishlist.getCabin().getImages().isEmpty()) {
+
             response.setImageUrl(
-                    cabin.getImages().get(0).getImageUrl()
+                    wishlist.getCabin()
+                            .getImages()
+                            .getFirst()
+                            .getImageUrl()
             );
+
         }
 
         return response;
+
     }
-    public List<WishlistResponse> getWishlist(Long userId) {
 
-        List<Wishlist> wishlist = wishlistRepository.findByUserId(userId);
-
-        return wishlist.stream().map(item -> {
-
-            WishlistResponse response = new WishlistResponse();
-
-            response.setWishlistId(item.getId());
-            response.setCabinId(item.getCabin().getId());
-            response.setCabinTitle(item.getCabin().getTitle());
-            response.setLocation(item.getCabin().getLocation());
-
-            if (!item.getCabin().getImages().isEmpty()) {
-                response.setImageUrl(
-                        item.getCabin().getImages().get(0).getImageUrl()
-                );
-            }
-
-            return response;
-
-        }).toList();
-    }
-    public void removeFromWishlist(Long wishlistId) {
-
-        Wishlist wishlist = wishlistRepository.findById(wishlistId)
-                .orElseThrow(() ->
-                        new WishlistException("Wishlist item not found."));
-
-        wishlistRepository.delete(wishlist);
-    }
 }
